build_log_2.txt
    Checking astraweave-render v0.1.0 (C:\Users\pv2br\Documents\GitHub\AstraWeave-AI-Native-Gaming-Engine\astraweave-render)
error[E0425]: cannot find value `POST_SHADER_FX` in this scope
   --> astraweave-render\src\renderer.rs:803:60
    |
31  | const POST_SHADER: &str = include_str!("../shaders/post_basic.wgsl");
    | --------------------------------------------------------------------- similarly named constant `POST_SHADER` defined here
...
803 |             source: wgpu::ShaderSource::Wgsl(Cow::Borrowed(POST_SHADER_FX)),
    |                                                            ^^^^^^^^^^^^^^ help: a constant with a similar name exists: `POST_SHADER`

warning: use of deprecated type alias `wgpu::ImageCopyTexture`: This has been renamed to `TexelCopyTextureInfo`, and will be removed in 25.0.0.
    --> astraweave-render\src\renderer.rs:2596:19
     |
2596 |             wgpu::ImageCopyTexture {
     |                   ^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(deprecated)]` on by default

warning: use of deprecated type alias `wgpu::ImageDataLayout`: This has been renamed to `TexelCopyBufferLayout`, and will be removed in 25.0.0.
    --> astraweave-render\src\renderer.rs:2603:19
     |
2603 |             wgpu::ImageDataLayout {
     |                   ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
    --> astraweave-render\src\renderer.rs:1966:30
     |
1966 |                 entry_point: "vs_main",
     |                              ^^^^^^^^^ expected `Option<&str>`, found `&str`
     |
     = note:   expected enum `std::option::Option<&str>`
             found reference `&'static str`
help: try wrapping the expression in `Some`
     |
1966 |                 entry_point: Some("vs_main"),
     |                              +++++         +

error[E0308]: mismatched types
    --> astraweave-render\src\renderer.rs:1972:30
     |
1972 |                 entry_point: "fs_main",
     |                              ^^^^^^^^^ expected `Option<&str>`, found `&str`
     |
     = note:   expected enum `std::option::Option<&str>`
             found reference `&'static str`
help: try wrapping the expression in `Some`
     |
1972 |                 entry_point: Some("fs_main"),
     |                              +++++         +

error[E0308]: mismatched types
    --> astraweave-render\src\renderer.rs:2455:30
     |
2455 |                 entry_point: "vs_main",
     |                              ^^^^^^^^^ expected `Option<&str>`, found `&str`
     |
     = note:   expected enum `std::option::Option<&str>`
             found reference `&'static str`
help: try wrapping the expression in `Some`
     |
2455 |                 entry_point: Some("vs_main"),
     |                              +++++         +

error[E0308]: mismatched types
    --> astraweave-render\src\renderer.rs:2461:30
     |
2461 |                 entry_point: "fs_main",
     |                              ^^^^^^^^^ expected `Option<&str>`, found `&str`
     |
     = note:   expected enum `std::option::Option<&str>`
             found reference `&'static str`
help: try wrapping the expression in `Some`
     |
2461 |                 entry_point: Some("fs_main"),
     |                              +++++         +

error[E0599]: no method named `request_texture` found for struct `TextureStreamingManager` in the current scope
    --> astraweave-render\src\renderer.rs:3228:53
     |
3228 |             let tex_handle = self.texture_streaming.request_texture(id.clone(), 100, 0.0);
     |                                                     ^^^^^^^^^^^^^^^ method not found in `TextureStreamingManager`
     |
    ::: astraweave-render\src\texture_streaming.rs:76:1
     |
76   | pub struct TextureStreamingManager {
     | ---------------------------------- method `request_texture` not found for this struct

error[E0599]: no method named `request_texture` found for struct `TextureStreamingManager` in the current scope
    --> astraweave-render\src\renderer.rs:3690:18
     |
3688 |               let handle_opt = self
     |  ______________________________-
3689 | |                 .texture_streaming
3690 | |                 .request_texture(tex_path.to_string(), 100, 1.0);
     | |                 -^^^^^^^^^^^^^^^ method not found in `TextureStreamingManager`
     | |_________________|
     |
     |
    ::: astraweave-render\src\texture_streaming.rs:76:1
     |
76   |   pub struct TextureStreamingManager {
     |   ---------------------------------- method `request_texture` not found for this struct

error[E0061]: this function takes 0 arguments but 1 argument was supplied
    --> astraweave-render\src\renderer.rs:3713:30
     |
3713 |             let vertex_buf = crate::debug_quad::create_screen_quad(&self.device);
     |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ------------ unexpected argument of type `&Arc<wgpu::Device>`
     |
note: function defined here
    --> astraweave-render\src\debug_quad.rs:31:8
     |
31   | pub fn create_screen_quad() -> Vec<DebugQuadVertex> {
     |        ^^^^^^^^^^^^^^^^^^
help: remove the extra argument
     |
3713 -             let vertex_buf = crate::debug_quad::create_screen_quad(&self.device);
3713 +             let vertex_buf = crate::debug_quad::create_screen_quad();
     |

error[E0599]: no method named `slice` found for struct `Vec<DebugQuadVertex>` in the current scope
    --> astraweave-render\src\renderer.rs:3732:56
     |
3732 |             debug_pass.set_vertex_buffer(0, vertex_buf.slice(..));
     |                                                        ^^^^^
     |
help: there is a method `splice` with a similar name, but with different arguments
    --> C:\Users\pv2br\.rustup\toolchains\1.89.0-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\alloc\src\vec\mod.rs:3675:5
     |
3675 | /     pub fn splice<R, I>(&mut self, range: R, replace_with: I) -> Splice<'_, I::IntoIter, A>
3676 | |     where
3677 | |         R: RangeBounds<usize>,
3678 | |         I: IntoIterator<Item = T>,
     | |__________________________________^

error[E0599]: no function or associated item named `load_texture_async` found for struct `texture::Texture` in the current scope
   --> astraweave-render\src\texture_streaming.rs:195:30
    |
195 |                     Texture::load_texture_async(&device, &queue, &path, TextureUsage::Albedo).await;
    |                              ^^^^^^^^^^^^^^^^^^ function or associated item not found in `texture::Texture`
    |
   ::: astraweave-render\src\texture.rs:53:1
    |
53  | pub struct Texture {
    | ------------------ function or associated item `load_texture_async` not found for this struct
    |
note: if you're trying to build a new `texture::Texture` consider using one of the following associated functions:
      texture::Texture::create_default_white
      texture::Texture::create_default_normal
   --> astraweave-render\src\texture.rs:61:5
    |
61  | /     pub fn create_default_white(
62  | |         device: &wgpu::Device,
63  | |         queue: &wgpu::Queue,
64  | |         label: &str,
65  | |     ) -> Result<Self> {
    | |_____________________^
...
112 | /     pub fn create_default_normal(
113 | |         device: &wgpu::Device,
114 | |         queue: &wgpu::Queue,
115 | |         label: &str,
116 | |     ) -> Result<Self> {
    | |_____________________^

Some errors have detailed explanations: E0061, E0308, E0425, E0599.
For more information about an error, try `rustc --explain E0061`.
warning: `astraweave-render` (lib) generated 2 warnings
error: could not compile `astraweave-render` (lib) due to 10 previous errors; 2 warnings emitted
